# poetry

./: README.md  manage.py  pyproject.toml
pre_existing_project/: asgi.py  settings.py  urls.py  wsgi.py
