[tool.poetry]
name = "pre-existing-project"
version = "0.1.0"
description = ""
authors = ["SolanoJason <pajason2000@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "==3.10.11"
pendulum = "^3.0.0"
numpy = "^1.26.4"
pandas = "^2.2.2"
matplotlib = "^3.8.4"
requests = "^2.31.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"
xdoctest = "^1.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
