[tool.poetry]
name = "pre-existing-project"
version = "0.1.0"
description = ""
authors = ["SolanoJason <pajason2000@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "==3.10.11"
pendulum = "^3.0.0"
pandas = "^2.2.2"
matplotlib = "^3.8.4"
requests = "^2.31.0"
jupyterlab = { version = '*', optional = true }
notebook = { version = '*', optional = true }
psycopg2 = { version = "*", optional = true }

[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"

[tool.poetry.extras]
jupyter = ['jupyterlab', 'notebook']
pgsql = ['psycopg2']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
